--- a/app/src/main/res/layout/row_prompt_questions.xml
+++ b/app/src/main/res/layout/row_prompt_questions.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<TextView xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/text_prompt_question"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -8,11 +8,9 @@
     android:fontFamily="@font/ptsans_regular"
     android:textSize="@dimen/_14ssp"
     android:textColor="@color/textSubTitle"
-    android:textAlignment="center"
-    android:paddingTop="@dimen/_10sdp"
-    android:paddingBottom="@dimen/_10sdp"
+    android:padding="@dimen/_10sdp"
     android:layout_marginBottom="@dimen/_5sdp"
-    android:drawableEnd="@drawable/ic_arrow_right"
     android:clickable="true"
     android:focusable="true"
-    android:background="@drawable/border_drawable"/>
+    android:background="@drawable/border_drawable"
+    app:drawableEndCompat="@drawable/ic_arrow_right" />
