--- a/app/src/main/res/layout/availability_saved_dialog.xml
+++ b/app/src/main/res/layout/availability_saved_dialog.xml
@@ -46,7 +46,7 @@
         android:fontFamily="@font/sf_pro_rounded_regular" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+        android:id="@+id/recyclerview_prompt_section"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
