--- a/app/src/main/res/layout/fragment_prompt_list.xml
+++ b/app/src/main/res/layout/fragment_prompt_list.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     tools:context=".views.prompt.PromptListFragment">
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+        android:id="@+id/recyclerview_prompt_section"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/text_disclaimer"
