--- a/app/src/main/res/layout/row_layout_profile_prompts.xml
+++ b/app/src/main/res/layout/row_layout_profile_prompts.xml
@@ -66,7 +66,7 @@
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:clickable="true"
                 android:focusable="true"
-                android:src="@drawable/photo_placeholder_1" />
+                android:src="@drawable/person" />
         </RelativeLayout>
 
     </LinearLayout>
