--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -29,7 +29,8 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        android:id="@+id/nestedscrollview">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -188,6 +189,42 @@
                 android:textColor="@color/textSubTitle"
                 android:textSize="@dimen/_14ssp" />
 
+            <!-- Location Input Lyout -->
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:fontFamily="@font/darkergrotesque_bold"
+                android:text="Where are you from?"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_18ssp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textview_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:background="@drawable/border_drawable"
+                android:clickable="true"
+                android:focusable="true"
+                android:fontFamily="@font/ptsans_regular"
+                android:paddingStart="@dimen/_15sdp"
+                android:paddingTop="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_15sdp"
+                android:paddingBottom="@dimen/_10sdp"
+                android:text="Tap to share your location"
+                android:textColor="@color/textSubTitle"
+                android:textSize="@dimen/_14ssp"
+                app:drawableEndCompat="@drawable/ic_location_24"
+                app:drawableTint="@color/black" />
+
             <!-- Education Input Lyout -->
 
             <TextView
@@ -222,7 +259,7 @@
                 android:layout_marginEnd="@dimen/_20sdp">
 
                 <RadioGroup
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:orientation="horizontal">
@@ -337,7 +374,7 @@
                 android:layout_marginEnd="@dimen/_20sdp">
 
                 <RadioGroup
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:orientation="horizontal">
@@ -466,7 +503,7 @@
                 android:layout_marginEnd="@dimen/_20sdp">
 
                 <RadioGroup
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:orientation="horizontal">
