--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -38,6 +38,35 @@
             android:layout_marginTop="@dimen/_15sdp"
             android:orientation="vertical">
 
+            <!-- Name Input Lyout -->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:fontFamily="@font/darkergrotesque_bold"
+                android:text="Your name"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_18ssp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/text_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:background="@drawable/border_drawable"
+                android:fontFamily="@font/ptsans_regular"
+                android:paddingStart="@dimen/_15sdp"
+                android:paddingTop="@dimen/_10sdp"
+                android:paddingBottom="@dimen/_10sdp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/textSubTitle"
+                android:textSize="@dimen/_14ssp" />
+
             <!-- Phone Input Lyout -->
             <TextView
                 android:layout_width="match_parent"
@@ -784,7 +813,7 @@
                 android:paddingTop="@dimen/_5sdp" />
 
             <TextView
-                android:id="@+id/button_update_about"
+                android:id="@+id/button_register_profile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
