--- a/app/src/main/res/layout/activity_complete_profile.xml
+++ b/app/src/main/res/layout/activity_complete_profile.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingTop="@dimen/_30sdp"
     tools:context=".views.CompleteProfileActivity">
-
 
     <TextView
         android:id="@+id/screentitle"
@@ -33,9 +32,10 @@
         android:id="@+id/profile_photo_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_below="@id/view"
-        android:layout_marginTop="@dimen/_20sdp">
+        android:layout_marginTop="@dimen/_20sdp"
+        android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -46,28 +46,21 @@
             android:textColor="@color/black"
             android:textSize="@dimen/_18ssp"
             android:textStyle="bold" />
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/profile_image_view_landscape"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_200sdp"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            app:srcCompat="@drawable/ic_person"
-            android:background="#0D000000"
-            app:shapeAppearanceOverlay="@style/roundedCornersImageView"
-            android:visibility="visible"/>
+
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/profile_image_view_portrait"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_400sdp"
+            android:layout_height="@dimen/_250sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:background="#0D000000"
             android:layout_marginStart="@dimen/_20sdp"
             android:layout_marginEnd="@dimen/_20sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            app:srcCompat="@drawable/ic_person"
-            android:background="#0D000000"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             app:shapeAppearanceOverlay="@style/roundedCornersImageView"
-            android:visibility="gone"/>
+            app:srcCompat="@drawable/ic_person" />
+
         <TextView
             android:id="@+id/select_profile_photo"
             android:layout_width="match_parent"
@@ -85,15 +78,16 @@
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/_18ssp"
-            app:drawableTint="@color/white"
-            app:drawableEndCompat="@drawable/ic_arrow_forward" />
+            app:drawableEndCompat="@drawable/ic_arrow_forward"
+            app:drawableTint="@color/white" />
+
         <TextView
             android:id="@+id/upload_profile_photo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_20sdp"
             android:background="@drawable/border_rounded_corner"
             android:clickable="true"
@@ -104,9 +98,20 @@
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="@dimen/_18ssp"
-            app:drawableTint="@color/white"
             android:visibility="gone"
-            app:drawableEndCompat="@drawable/ic_upload" />
+            app:drawableEndCompat="@drawable/ic_upload"
+            app:drawableTint="@color/white" />
+
+        <com.github.ybq.android.spinkit.SpinKitView
+            android:id="@+id/uploading_progress"
+            style="@style/SpinKitView.Large.Circle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:SpinKit_Color="@color/indicatioractive"
+            android:visibility="gone"
+            android:elevation="@dimen/_10sdp"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/_20sdp"/>
     </LinearLayout>
 
 </RelativeLayout>
